# Huffman-coding

./: .gitignore  CMakeLists.txt  README.md  data.txt
src/: BitReader.cpp  BitReader.h  BitWriter.cpp  BitWriter.h  HuffmanTree.cpp  HuffmanTree.h  analyze.cpp  analyze.h  bit_writer.cpp  bit_writer.h  cli.cpp  cli.h  decode.cpp  decode.h  encode.cpp  encode.h  main.cpp  measurement.cpp  measurement.h
tests/: bit_writer_test.cpp  cli_test.cpp  huffman_tree_test.cpp  test.cpp  tree_reading_test.cpp  tree_writing_test.cpp
utils/: huffman_tree.cpp  huffman_tree.h
